--- a/appsettings.json
+++ b/appsettings.json
@@ -1,25 +1,18 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=SmartHomeDashboard;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=SmartHomeDashboard;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true"
   },
   "TuyaApi": {
     "BaseUrl": "https://openapi.tuyacn.com",
-    "ClientId": "YOUR_TUYA_CLIENT_ID",
-    "ClientSecret": "YOUR_TUYA_CLIENT_SECRET",
-    "RedirectUri": "https://your-domain.com/auth/tuya/callback",
-    "WebhookBaseUrl": "https://your-domain.com"
+    "ClientId": "y3upkj9vdwgp5y95yuka",
+    "ClientSecret": "c4baa3782f3346df81bb093cfcfbe58f",
+    "RedirectUri": "http://localhost:5026/auth/tuya/callback"
   },
   "Jwt": {
-    "Key": "YOUR_SECRET_JWT_KEY",
+    "Key": "2FE02A7F16C04000B3D6391CB40B23FA00012F30",
     "Issuer": "SmartHomeDashboard",
     "Audience": "SmartHomeDashboard",
     "ExpireDays": 7
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
   },
   "AllowedHosts": "*",
   "Kestrel": {
